--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,3 @@
-<!-- FILEPATH: /home/mikmik/development/mentihack/static/index.html -->
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -100,96 +98,101 @@
                 background-color: #007bff;
                 color: #fff;
             }
+            .hidden {
+                display: none;
+            }
         </style>
     </head>
     <body>
         <h1>Menti Viewer</h1>
         <form id="menti-form">
             <label for="menti-code">Enter Menti Code:</label>
-            <input type="text" id="menti-code" name="menti-code" required>
+            <input type="text" id="menti-code" name="menti-code" required />
             <button type="submit">Submit</button>
         </form>
         <div id="menti-container">
             <h2 id="menti-name"></h2>
             <button id="prev-slide" disabled>Previous</button>
             <button id="next-slide">Next</button>
-            <br> <br>
-            <img id="menti-image" src="" alt="" width="50%" height="50%">
+            <br />
+            <br />
+            <img id="menti-image" src="" alt="" width="50%" height="50%" />
             <div id="menti-choices"></div>
         </div>
         <script>
-            const form = document.getElementById('menti-form');
-            const container = document.getElementById('menti-container');
-            const nameEl = document.getElementById('menti-name');
-            const imageEl = document.getElementById('menti-image');
-            const choicesEl = document.getElementById('menti-choices');
-            const prevBtn = document.getElementById('prev-slide');
-            const nextBtn = document.getElementById('next-slide');
+            const form = document.getElementById("menti-form");
+            const container = document.getElementById("menti-container");
+            const nameEl = document.getElementById("menti-name");
+            const imageEl = document.getElementById("menti-image");
+            const choicesEl = document.getElementById("menti-choices");
+            const prevBtn = document.getElementById("prev-slide");
+            const nextBtn = document.getElementById("next-slide");
             let currentSlide = 0;
             let slides = [];
 
-            form.addEventListener('submit', async (event) => {
+            form.addEventListener("submit", async (event) => {
                 event.preventDefault();
-                const code = document.getElementById('menti-code').value;
+                const code = document.getElementById("menti-code").value;
                 const response = await fetch(`/menti/${code}`);
                 const data = await response.json();
                 nameEl.textContent = data.name;
                 imageEl.src = data.slides[currentSlide].image;
-                if (data.slides[currentSlide].type === 'quiz') {
+                if (data.slides[currentSlide].type === "quiz") {
                     const choices = data.slides[currentSlide].choices;
-                    choicesEl.innerHTML = '';
+                    choicesEl.innerHTML = "";
                     choices.forEach((choice) => {
-                        const choiceEl = document.createElement('div');
+                        const choiceEl = document.createElement("div");
                         choiceEl.textContent = choice;
                         choicesEl.appendChild(choiceEl);
                     });
                 } else {
-                    choicesEl.innerHTML = '';
+                    choicesEl.innerHTML = "";
                 }
                 slides = data.slides;
-                container.style.display = 'block';
+                container.style.display = "block";
+                form.classList.add("hidden");
                 if (slides.length > 1) {
                     nextBtn.disabled = false;
                 }
             });
 
-            prevBtn.addEventListener('click', () => {
+            prevBtn.addEventListener("click", () => {
                 currentSlide--;
                 if (currentSlide === 0) {
                     prevBtn.disabled = true;
                 }
                 nextBtn.disabled = false;
                 imageEl.src = slides[currentSlide].image;
-                if (slides[currentSlide].type === 'quiz') {
+                if (slides[currentSlide].type === "quiz") {
                     const choices = slides[currentSlide].choices;
-                    choicesEl.innerHTML = '';
+                    choicesEl.innerHTML = "";
                     choices.forEach((choice) => {
-                        const choiceEl = document.createElement('div');
+                        const choiceEl = document.createElement("div");
                         choiceEl.textContent = choice;
                         choicesEl.appendChild(choiceEl);
                     });
                 } else {
-                    choicesEl.innerHTML = '';
+                    choicesEl.innerHTML = "";
                 }
             });
 
-            nextBtn.addEventListener('click', () => {
+            nextBtn.addEventListener("click", () => {
                 currentSlide++;
                 if (currentSlide === slides.length - 1) {
                     nextBtn.disabled = true;
                 }
                 prevBtn.disabled = false;
                 imageEl.src = slides[currentSlide].image;
-                if (slides[currentSlide].type === 'quiz') {
+                if (slides[currentSlide].type === "quiz") {
                     const choices = slides[currentSlide].choices;
-                    choicesEl.innerHTML = '';
+                    choicesEl.innerHTML = "";
                     choices.forEach((choice) => {
-                        const choiceEl = document.createElement('div');
+                        const choiceEl = document.createElement("div");
                         choiceEl.textContent = choice;
                         choicesEl.appendChild(choiceEl);
                     });
                 } else {
-                    choicesEl.innerHTML = '';
+                    choicesEl.innerHTML = "";
                 }
             });
         </script>
