--- a/static/index.html
+++ b/static/index.html
@@ -132,71 +132,58 @@
         let currentSlide = 0;
         let slides = [];
 
+        function showSlide(slideIndex) {
+          if (slideIndex < 0 || slideIndex > slides.length - 1) return;
+
+          currentSlide = slideIndex;
+          prevBtn.prop("disabled", currentSlide === 0);
+          nextBtn.prop("disabled", currentSlide === slides.length - 1);
+          imageEl.attr("src", slides[currentSlide].image);
+          if (slides[currentSlide].type === "quiz") {
+            const choices = slides[currentSlide].choices;
+            choicesEl.html("");
+            choices.forEach((choice) => {
+              const choiceEl = $("<div></div>");
+              choiceEl.text(choice);
+              choicesEl.append(choiceEl);
+            });
+          } else {
+            choicesEl.html("");
+          }
+        }
+
+        function showNextSlide() {
+          showSlide(currentSlide + 1);
+        }
+
+        function showPrevSlide() {
+          showSlide(currentSlide - 1);
+        }
+
         form.on("submit", async (event) => {
           event.preventDefault();
           const code = $("#menti-code").val();
           const response = await fetch(`/menti/${code}`);
           const data = await response.json();
           nameEl.text(data.name);
-          imageEl.attr("src", data.slides[currentSlide].image);
-          if (data.slides[currentSlide].type === "quiz") {
-            const choices = data.slides[currentSlide].choices;
-            choicesEl.html("");
-            choices.forEach((choice) => {
-              const choiceEl = $("<div></div>");
-              choiceEl.text(choice);
-              choicesEl.append(choiceEl);
-            });
-          } else {
-            choicesEl.html("");
-          }
           slides = data.slides;
+          showSlide(0);
           container.css("display", "block");
           form.addClass("hidden");
           if (slides.length > 1) {
-            nextBtn.prop("disabled", false);
+            $(document).on("keydown", function (event) {
+              if (event.which === 37) {
+                showPrevSlide();
+              } else if (event.which === 39) {
+                showNextSlide();
+              }
+            });
           }
         });
 
-        prevBtn.on("click", () => {
-          currentSlide--;
-          if (currentSlide === 0) {
-            prevBtn.prop("disabled", true);
-          }
-          nextBtn.prop("disabled", false);
-          imageEl.attr("src", slides[currentSlide].image);
-          if (slides[currentSlide].type === "quiz") {
-            const choices = slides[currentSlide].choices;
-            choicesEl.html("");
-            choices.forEach((choice) => {
-              const choiceEl = $("<div></div>");
-              choiceEl.text(choice);
-              choicesEl.append(choiceEl);
-            });
-          } else {
-            choicesEl.html("");
-          }
-        });
+        prevBtn.on("click", showPrevSlide);
 
-        nextBtn.on("click", () => {
-          currentSlide++;
-          if (currentSlide === slides.length - 1) {
-            nextBtn.prop("disabled", true);
-          }
-          prevBtn.prop("disabled", false);
-          imageEl.attr("src", slides[currentSlide].image);
-          if (slides[currentSlide].type === "quiz") {
-            const choices = slides[currentSlide].choices;
-            choicesEl.html("");
-            choices.forEach((choice) => {
-              const choiceEl = $("<div></div>");
-              choiceEl.text(choice);
-              choicesEl.append(choiceEl);
-            });
-          } else {
-            choicesEl.html("");
-          }
-        });
+        nextBtn.on("click", showNextSlide);
       });
     </script>
   </body>
