add display of slide types

--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,7 @@
       <h3 id="slide-title"></h3>
       <img id="menti-image" src="" alt="" width="50%" height="50%" />
       <div id="menti-choices"></div>
+      <h4 id="slide-type"></h4>
     </div>
   </body>
 </html>
